# salary-prediction

./: Python Notes II.md  README.md  mysql-connector.py  pyproject.toml  requirements.txt  sql_python.ipynb  streamlit_app.py
.github/: copilot-instructions.md
data/cleaned/: Cleaned_data_analyst_jobs.csv  Cost-Of-Living Cities (CLI).csv  data_cleaning.ipynb
data/raw/: messy_data_analyst_jobs.csv
notebooks/: Geolocation_python.ipynb  data_cleaning.ipynb
sql/: Clean_special_characters.sql  Cleaned_data_analyst_jobs.csv  sql_python.ipynb
