[project]
name = "salary-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lightgbm>=4.6.0",
    "mysql-connector-python>=9.7.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.58.0",
    "xgboost>=3.3.0",
]
